Development of the 5-Ions method - Stage annotation.

--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,25 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id 'maven-publish'
 }
 
 allprojects {
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId = "br.ufsc.ine.ppgcc"
+                artifactId = "5ions-implementation"
+                version = "0.1"
+            }
+        }
+    }
+
     repositories {
         jcenter()
     }
 }
 
 subprojects {
-    version = '1.0'
 
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
