Change in project structure from Rest API to Worker Service.

--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,48 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
-    id 'maven-publish'
-}
-
-allprojects {
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                groupId = "br.ufsc.ine.ppgcc"
-                artifactId = "5ions-implementation"
-                version = "0.1"
-            }
-        }
-    }
-
-    repositories {
-        jcenter()
-    }
 }
 
 subprojects {
 
+    group = 'br.ufsc.ine.ppgcc.5ions-implementation'
+    version = '0.0.1-SNAPSHOT'
+
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'java-library'
+    apply plugin: 'jacoco'
+
+    repositories {
+        jcenter()
+    }
 
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:2.1.7.RELEASE")
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.2.4.RELEASE")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR8")
         }
+    }
+
+    dependencies {
+
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile "org.mockito:mockito-core:2.+"
+    }
+
+    jacoco {
+        toolVersion = "0.8.5"
+        reportsDir = file("$buildDir/jacoco")
+    }
+
+    jacocoTestReport {
+        dependsOn test
+    }
+
+    test {
+        useJUnit()
+
+        maxHeapSize = '1G'
+
+        finalizedBy jacocoTestReport
     }
 }
