--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id 'java'
+    //id "io.spring.dependency-management" version "1.0.12.RELEASE"
+    id 'org.springframework.boot' version '2.7.4'
+}
+
+springBoot {
+    mainClass = 'br.ufsc.ine.ppgcc.Application'
 }
 
 subprojects {
@@ -13,24 +19,38 @@ subprojects {
     apply plugin: 'jacoco'
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:2.2.4.RELEASE")
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR8")
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.7.4")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:2021.0.3")
         }
     }
 
     dependencies {
+        compileOnly 'org.projectlombok:lombok:1.18.24'
+        annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-        testCompile "org.mockito:mockito-core:2.+"
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+        implementation 'io.springfox:springfox-swagger2:3.0.0'
+        implementation 'io.springfox:springfox-boot-starter:3.0.0'
+        implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.amqp:spring-rabbit-test'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0-M1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0-M1'
+        testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
+
+        testImplementation 'org.springframework.integration:spring-integration-test'
     }
 
     jacoco {
-        toolVersion = "0.8.5"
+        toolVersion = "0.8.8"
         reportsDir = file("$buildDir/jacoco")
     }
 
